--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Inventory-Smart
+# C?u hình k?t n?i PostgreSQL chu?n m?c
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory-db
+spring.datasource.username=thanvinh
+spring.datasource.password=NamMoi2020@
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# B?t Hibernate t? sinh c?u trúc b?ng theo Entity
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
