--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Inventory-Smart
 
 # Cấu hình kết nối PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/inventory_db
+spring.datasource.username=thanvinh
+spring.datasource.password=NamMoi2020
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Cấu hình Hibernate tự động tạo bảng (Dành cho Dev)
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+# rabbitmq-server
