--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 # rabbitmq-server
+
+# Mở các endpoint của Actuator (health, info, prometheus)
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.health.show-details=always
+management.metrics.tags.application=${spring.application.name}
